--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <head>
-    <body>
-        
-    </body>
+    <title>Google</title>
+    <link rel="stylesheet" href="CSS.css">
 </head>
+
+    <body>
+        <div id:Logo>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+        </div>
+        <div id:Search Form>
+            <input type="text">
+        </div>
+    </body>
+</html>
