Centered Logo & search form

--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <head>
     <title>Google</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="CSS.css" type="text/css">
 </head>
 
     <body>
-        <div id:Logo>
+        <div class="nav">
+            <a href= "#About">About</a>
+            <a href="#Store">Store</a>
+            <a href="#Gmail">Gmail</a>
+            <a href="#Images">Images</a>
+            <a href="#Logo">
+             
+            </a>
+
+
+
+        </div>       
+        <div id="Logo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
-        <div id:Search Form>
+        <div id="SearchForm">
             <input type="text">
         </div>
     </body>
