left side nav done

--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
 
     <body>
         <div class="nav">
-            <a href= "#About">About</a>
-            <a href="#Store">Store</a>
-            <a href="#Gmail">Gmail</a>
-            <a href="#Images">Images</a>
-            <a href="#Logo">
-             
-            </a>
-
-
-
+            <a href= "#About" id="left">About</a>
+            <a href="#Store" id="left">Store</a>
+            <a href="#Gmail"id="right">Images</a>
+            <a href="#Images"id="right">Gmail</a>
         </div>       
         <div id="Logo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
