fixing search form

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div id="Logo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
-        <div id="SearchForm">
-            <input type="text">
-        </div>
+        <form id="SearchForm">
+            <div class="search">
+                <input type="text" name="search" class="round"/>
+          </div>
+        </form>
     </body>
 </html>
