--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
             <div class="search">
                 <input type="text" name="search" class="round"/>
             </div>
-        <div id="footer">
-            <div class="nav">
+        <div">
+            <div class="footer">
                 <a href= "#Advertising" id="left">Advertising</a>
                 <a href="#Business" id="left">Business</a>
                 <a href="#How Search Works"id="left">How Search Works</a>
                 <a href="#Privacy"id="right">Privacy</a> 
                 <a href= "#Terms" id="right">Terms</a>
                 <a href="#Settings" id="right">Settings</a>
+            </div>
         </div>
         </form>
     </body>
