--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
     <body>
         <div class="nav">
-            <a href= "#About" id="left">About</a>
-            <a href="#Store" id="left">Store</a>
-            <a href="#Gmail"id="right">Images</a>
-            <a href="#Images"id="right">Gmail</a>
+            <a href= "#About" class="left">About</a>
+            <a href="#Store" class="left">Store</a>
+            <a href="#Gmail"class="right">Images</a>
+            <a href="#Images"class="right">Gmail</a>
+            <button> Sign In</button>
         </div>       
         <div id="Logo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
@@ -19,13 +20,17 @@
                 <input type="text" name="search" class="round"/>
             </div>
         <div">
+            <div class="buttons">
+                <button2>Google Search</button>
+                <button3> I'm Feeling Lucky</button>
+            </div>
             <div class="footer">
-                <a href= "#Advertising" id="left">Advertising</a>
-                <a href="#Business" id="left">Business</a>
-                <a href="#How Search Works"id="left">How Search Works</a>
-                <a href="#Privacy"id="right">Privacy</a> 
-                <a href= "#Terms" id="right">Terms</a>
-                <a href="#Settings" id="right">Settings</a>
+                <a href= "#Advertising" class="left">Advertising</a>
+                <a href="#Business" class="left">Business</a>
+                <a href="#How Search Works"class="left">How Search Works</a>
+                <a href="#Privacy"class="right">Privacy</a> 
+                <a href= "#Terms" class="right">Terms</a>
+                <a href="#Settings" class="right">Settings</a>
             </div>
         </div>
         </form>
