--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             <div class="search">
                 <input type="text" name="search" class="round"/>
             </div>
-        <div">
-            <div class="buttons">
-                <button2>Google Search</button>
-                <button3> I'm Feeling Lucky</button>
-            </div>
+        </form>
+        <div class="buttons">
+            <button2>Google Search</button2>
+            <button3> I'm Feeling Lucky</button3>
+        </div>
+        <div>  
             <div class="footer">
                 <a href= "#Advertising" class="left">Advertising</a>
                 <a href="#Business" class="left">Business</a>
@@ -33,6 +34,5 @@
                 <a href="#Settings" class="right">Settings</a>
             </div>
         </div>
-        </form>
     </body>
 </html>
